--- a/java-tomcat-sample/Jenkinsfile
+++ b/java-tomcat-sample/Jenkinsfile
@@ -11,15 +11,14 @@ pipeline {
                     archiveArtifacts artifacts: '**/*.war'
                 }
             }
-            stage('Deploy in Staging Environment'){
-         
-                build job: 'Deploy_tomcat_application_to_stagging_ENV'
-
+        }
+        stage('Deploy in Staging Environment'){
+            steps{
+                build job: 'Deploy_Application_Staging_Env'
+ 
+            }
             
-
         }
-        }
-
         
     }
 }
